--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-  color: #878787;
+  color: black;
   display: block;
   font-size: 24px;
   font-weight: 100;
